--- a/src/app/components/images/image/image.component.html
+++ b/src/app/components/images/image/image.component.html
@@ -19,8 +19,14 @@
           <option value="Other">Other</option>
         </select>
       </div>
-      <div class="form-group">
-        <button [disabled]="!formTemplate.valid" type="submit" class="btn btn-success float-right">Submit</button>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <a routerLink="/image/list" class="btn btn-primary btn-block float-right">Go To Gallery</a>
+        </div>
+        <div class="form-group col-md-6">
+          <button [disabled]="!formTemplate.valid" type="submit"
+            class="btn btn-success btn-block float-right">Submit</button>
+        </div>
       </div>
     </form>
   </div>
