--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+.imageBox {
+  background: black;
+  padding: 0px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.imageBox img {
+  opacity: 1;
+  transition: 0.5s opacity;
+}
+
+.imageBox .imageBoxDesc {
+  background-color: rgba(0, 0, 0, 0.6);
+  bottom: 0px;
+  color: white;
+  font-size: 1.2em;
+  left: 0px;
+  padding: 10px 15px;
+  position: absolute;
+  transition: 0.5s padding;
+  text-align: center;
+  width: 100%;
+}
+
+.imageBox:hover img {
+  opacity: 0.7;
+}
+
+.imageBox:hover .imageBoxDesc {
+  padding-bottom: 10%;
+}
